tests/baselines/reference/classStaticBlock13(target=es5).errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock13.ts(2,10): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock13.ts (1 errors) ====
    class C {
      static #x = 123;
             ~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
      
      static {
        console.log(C.#x)
      }
    
      foo () {
        return C.#x;
      }
    }
    